--- a/chrome/square-tabs.css
+++ b/chrome/square-tabs.css
@@ -73,3 +73,24 @@
 #firefox-view-button image {
 	outline: none !important;
 }
+
+/* tab separators */
+#TabsToolbar .tabbrowser-tab:not([selected="true"]) .tab-stack::before {
+	content: "";
+	position: absolute;
+	display: block;
+	height: var(--tab-min-height);
+	right: 0;
+	border-right: 1px solid color-mix(in srgb, currentColor 20%, transparent);
+	z-index: 1;
+}
+.tabbrowser-tab:has(+ .tabbrowser-tab[selected="true"]:not([hidden])) .tab-stack::before,
+:root #firefox-view-button[open] + #tabbrowser-tabs arrowscrollbox > :first-child:not([selected="true"]) .tab-stack::after,
+:root #firefox-view-button[open]::before {
+	border-right-color: transparent !important;
+}
+
+/* tab Groups */
+.tab-group-label {
+	border-radius: 2px !important;
+}
