--- a/chrome/userVariables.css
+++ b/chrome/userVariables.css
@@ -12,4 +12,6 @@
   --tab-attention-icon-color: var(--custom-accent-color) !important;
   --urlbar-popup-url-color: var(--custom-accent-color) !important;
   --focus-outline-color: var(--custom-accent-color) !important;
+
+  --tab-group-line-toolbar-border-distance: 0px !important;
 }
