--- a/chrome/square-tabs.css
+++ b/chrome/square-tabs.css
@@ -1,6 +1,7 @@
 /* Photon style square tabs */
 :root {
   --tab-block-margin: 0 !important;
+  --tab-border-radius: 0 !important;
 }
 @media (-moz-platform: linux) {
   .tabbrowser-tab {
@@ -23,7 +24,6 @@
 
 /* Makes the tab photon-like + adds a transition */
 .tab-close-button {
-  border-radius: 2px !important;
   transition: background 0.2s cubic-bezier(.07,.95,0,1) !important;
 }
 .tab-close-button {
@@ -33,7 +33,6 @@
   height: 24px !important;
 }
 .tabbrowser-tab > .tab-stack > .tab-background {
-  border-radius: 0 !important;
   margin: 0 !important;
   box-shadow: none !important;
   transition: background 0.2s cubic-bezier(.07,.95,0,1) !important;
@@ -102,7 +101,6 @@ tab-group[collapsed]:has(+ .tabbrowser-tab[selected="true"]:not([hidden])) .tab-
   border-right-color: var(--tab-group-color);
 }
 .tab-group-label {
-  border-radius: 0px !important;
   height: 100%;
   padding: 7px 7px !important;
 }
@@ -116,6 +114,13 @@ tab-group[collapsed]:has(+ .tabbrowser-tab[selected="true"]:not([hidden])) .tab-
   margin-inline-start: 0px !important;
 }
 
+/* square tab scroll buttons */
+#scrollbutton-down, #scrollbutton-up {
+  border: 0 !important;
+  border-radius: var(--tab-border-radius) !important;
+  padding: 6px !important;
+}
+
 /* change colour of indicator when creating a new tab while overflowing */
 /* #scrollbutton-down is inside a shadow dom */
 #tabbrowser-arrowscrollbox {
@@ -124,7 +129,7 @@ tab-group[collapsed]:has(+ .tabbrowser-tab[selected="true"]:not([hidden])) .tab-
 #tabbrowser-arrowscrollbox[highlight] {
   --scrollbutton-bg: var(--custom-accent-color);
 }
-#scrollbutton-down {
+#scrollbutton-down:not(:hover) {
   background-color: var(--scrollbutton-bg) !important;
 }
 
@@ -134,7 +139,6 @@ tab-group[collapsed]:has(+ .tabbrowser-tab[selected="true"]:not([hidden])) .tab-
   padding-inline-start: var(--tab-overflow-pinned-tabs-width) !important;
 }
 #firefox-view-button .toolbarbutton-icon {
-  border-radius: 0 !important;
   padding-left: calc(var(--toolbarbutton-inner-padding) + 1px) !important;
   padding-right: calc(var(--toolbarbutton-inner-padding) + 1px) !important;
   width: 36px !important;
